--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -1,3 +1,53 @@
-// Place all the styles related to the reservations controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+  #reservations .calendar {
+    border-collapse: collapse;
+    width: 100%;
+    text-align: left;
+
+    td, th {
+      font-family: "Lucida Grande", arial, helvetica, sans-serif;
+      font-size: 10px;
+      padding: 6px;
+      border: 1px solid $turquoise;
+    }
+
+    th {
+      background: $turquoise;
+      color: $white;
+      font-weight: 700;
+      text-align: center;
+      width: 14.2857142857143%;
+    }
+
+    td {
+      background: lighten($black, 5%);
+      color: $white;
+      height: 80px;
+      vertical-align: top;
+      font-size: 16px;
+    }
+
+    .notmonth, .notmonth a { color: $turquoise; background: lighten($black, 10%); }
+    .today { background-color: $turquoise; color: $white; font-weight: 700 }
+  }
+
+  #reservations #month {
+    margin: 0;
+    padding-bottom: 10px;
+    text-align: center;
+    font-size: 25px;
+    a {
+      text-decoration: none;
+      padding: 0 10px;
+      color: #999;
+    }
+  }
+
+  #reservations ul {
+    font-size: 8px;
+    padding-left: 0px;
+  }
+
+  #reservations li {
+    font-size: 12px;
+    padding-left: 0px;
+  }
