--- a/app/assets/stylesheets/users.sass
+++ b/app/assets/stylesheets/users.sass
@@ -1,3 +1,18 @@
 .user-wrapper
-  background: $turquoise
-  
+  +outer-container(75%)
+  padding: 50px
+  background: lighten($black, 10%)
+  color: $turquoise
+  margin-top: 50px
+  h2
+    text-align: center
+    text-transform: uppercase
+    letter-spacing: .1em
+    font-size: 22px
+
+  .home-btn
+    background: $turquoise
+    padding: 10px 20px
+    border-radius: 0px
+    font-weight: 700
+    +turquoise-link
