--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-<%= yield %>
-
+  <% flash.each do |name, msg| %>
+    <%= content_tag(:div, msg, class: "alert")%>
+  <% end %>
+  <%= yield %>
+<script>
+$(document).ready(function(){
+  setTimeout(function(){
+    $('.alert').fadeOut("slow", function(){
+      $this.remove();
+    })
+  }, 2500);
+});
+</script>
 </body>
 </html>
