--- a/app/views/reservations/show.html.haml
+++ b/app/views/reservations/show.html.haml
@@ -6,7 +6,7 @@
         %br
         = @reservation.name
       %p
-        %strong Description:
+        %strong Reservation Details:
         %br
         = @reservation.description
       %p
