Small margin edit

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -22,7 +22,7 @@ body
   min-height: 100vh
   .home-content
     text-align: center
-    margin: 10px 0
+    margin: 10px 0 25px 0
     +outer-container(100%)
     .res-show
       background: lighten($black, 5%)
