--- a/app/views/reservations/show.html.haml
+++ b/app/views/reservations/show.html.haml
@@ -12,9 +12,9 @@
       %p
         %strong Reservation Time:
         %br
-        = @reservation.start_time.strftime("%H:%M%P")
+        = @reservation.start_time.strftime("%I:%M%P")
         \-
-        = @reservation.end_time.strftime("%H:%M%P")
+        = @reservation.end_time.strftime("%I:%M%P")
       %p
         %strong Conference Room:
         %br
