--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$base-font-family: $helvetica, serif;
+$base-font-family: 'Lato', sans-serif;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
