--- a/app/views/reservations/_form.html.haml
+++ b/app/views/reservations/_form.html.haml
@@ -2,7 +2,7 @@
   %h2 Reservation For
   = f.select :name, [ 'Amanda Prescott', 'Ashley Hopson', 'Jason Forshee', 'Brian Phelps', 'Chip Gage', 'Chris Groves', 'Clay Pulliam', 'Kerry Peterson', 'Luis Zambrano', 'Margarita Coale', 'Michael Colvin', 'Peter Dewar', 'Robert McCormick', 'Robin Hopkins', 'Shane Egan', 'Walt Miller', 'Zoltron' ], prompt: "Select One"
   %h2 Select Date
-  = f.text_field :published_on
+  = f.text_field :published_on, readonly: true
   %h2 Select Time
   = f.datetime_select :start_time, ampm: true, :combined => true, :minute_interval => 30, :time_separator => "", :start_hour => 8, :start_minute => 00, :end_hour => 17, :end_minute => 00
   = f.datetime_select :end_time, ampm: true, :combined => true, :minute_interval => 30, :time_separator => "", :start_hour => 8, :start_minute => 00, :end_hour => 17, :end_minute => 00
