--- a/app/assets/stylesheets/ui.scss
+++ b/app/assets/stylesheets/ui.scss
@@ -262,6 +262,7 @@ button.ui-button::-moz-focus-inner {
 	margin-left: -8px;
 	top: 50%;
 	margin-top: -8px;
+	background-color: #1abc9c;
 }
 .ui-datepicker .ui-datepicker-title {
 	margin: 0 2.3em;
