--- a/app/assets/stylesheets/vars_mixins_fonts.sass
+++ b/app/assets/stylesheets/vars_mixins_fonts.sass
@@ -10,7 +10,7 @@ $grey1: #ecf0f1
 $grey2: #bdc3c7
 $grey3: #95a5a6
 $grey4: #7f8c8d
-$black: #1c2834
+$black: #FFFFFF
 $red: #e74c3c
 $dark-red: #c0392b
 $orange: #e67e22
