--- a/app/assets/stylesheets/vars_mixins_fonts.sass
+++ b/app/assets/stylesheets/vars_mixins_fonts.sass
@@ -1,7 +1,7 @@
 // Colors
 
 $dark-turquoise: #16a085
-$turquoise: #1abc9c
+$turquoise: #273c75
 $greyblue: #34495e
 $dark-greyblue: #2c3e50
 $purple: #9b59b6
@@ -15,7 +15,7 @@ $red: #e74c3c
 $dark-red: #c0392b
 $orange: #e67e22
 $dark-orange: #d35400
-$white: #fafafa
+$white: #273c75
 $yellow: #f1c40f
 $dark-yellow: #f39c12
 $green: #2ecc71
