--- a/app/assets/stylesheets/vars_mixins_fonts.sass
+++ b/app/assets/stylesheets/vars_mixins_fonts.sass
@@ -1,27 +1,10 @@
 // Colors
 
-$dark-turquoise: #16a085
-$turquoise: #273c75
-$greyblue: #34495e
-$dark-greyblue: #2c3e50
-$purple: #9b59b6
-$dark-purple: #8e44ad
-$grey1: #ecf0f1
-$grey2: #bdc3c7
-$grey3: #95a5a6
-$grey4: #7f8c8d
-$black: #FFFFFF
-$red: #e74c3c
-$dark-red: #c0392b
-$orange: #e67e22
-$dark-orange: #d35400
-$white: #273c75
-$yellow: #f1c40f
-$dark-yellow: #f39c12
-$green: #2ecc71
-$dark-green: #27ae60
-$blue: #3498db
-$dark-blue: #2980b9
+
+$bluenew: #273c75
+$blacknew: #000000
+$whitenew: #FFFFFF
+
 
 
 // Mixins
