--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -1,10 +1,10 @@
 body
-  background: $black
+  background: $whitenew
 .alert
   width: 100%
   text-align: center
-  background: transparentize($turquoise, .3)
-  color: $white
+  background: transparentize($bluenew, .3)
+  color: $blacknew
   //text-transform: uppercase
   font:
     weight: 700
@@ -18,14 +18,14 @@ body
   //+display(flex)
   //+justify-content(center)
   //+align-items(center)
-  background: $black
+  background: $whitenew
   min-height: 100vh
   .home-content
     text-align: center
     margin: 10px 0 25px 0
     +outer-container(90%)
     .res-show
-      background: lighten($black, 5%)
+      background: lighten($blacknew, 5%)
       padding: 50px
       +span-columns(6)
       float: none
@@ -40,25 +40,25 @@ body
       label
         display: none
       a
-        color: $turquoise
+        color: $bluenew
         transition: .3s ease-in-out
         &:hover
-          color: lighten($turquoise, 25%)
+          color: lighten($bluenew, 25%)
 
       h2
         padding: 20px 0 10px 0
       @media(max-width: 880px)
         +span-columns(12)
     strong
-      color: $turquoise
+      color: $bluenew
     select
-      background: $white
+      background: $whitenew
       border: none
       text-align: center
       margin: 10px auto
 
     h1
-      color: $turquoise
+      color: $bluenew
       text-transform: uppercase
       font-size: 80px
       letter-spacing: .1em
@@ -68,7 +68,7 @@ body
       @media(max-width: 770px)
         font-size: 40px
     h2
-      color: $turquoise
+      color: $bluenew
       text-transform: uppercase
       letter-spacing: .1em
       line-height: 1
@@ -76,24 +76,24 @@ body
       padding: 0
 
     h3
-      color: $white
+      color: $whitenew
       font-size: 20px
       text-transform: uppercase
       letter-spacing: .1em
       margin-bottom: 10px
     p
-      color: $white
+      color: $blacknew
       font:
         size: 24px
         weight: 700
       margin-bottom: 50px
 
     .home-btn
-      background: $turquoise
+      background: $bluenew
       padding: 10px 20px
       border-radius: 0px
       font-weight: 700
-      +turquoise-link
+      +blue-link
       @media(max-width: 660px)
         margin-top: 20px
 
@@ -102,4 +102,4 @@ body
       border-radius: 0px
       font-weight: 700
       a
-        +turquoise-link
+        +blue-link
