--- a/app/assets/stylesheets/vars_mixins_fonts.sass
+++ b/app/assets/stylesheets/vars_mixins_fonts.sass
@@ -28,11 +28,11 @@ $whitenew: #FFFFFF
   &:hover
     color: $dark-red
 
-=turquoise-link
-  color: $white
+=blue-link
+  color: $whitenew
   transition: .3s ease-in-out
   &:hover
-    color: lighten($black, 25%)
+    color: lighten($blacknew, 25%)
 
 =turquoise-link2
   color: $black
