--- a/app/assets/stylesheets/vars_mixins_fonts.sass
+++ b/app/assets/stylesheets/vars_mixins_fonts.sass
@@ -56,11 +56,11 @@ $dark-blue: #2980b9
     color: lighten($blacknew, 25%)
 
 =turquoise-link2
-  color: $black
+  color: $blacknew
   transition: .3s ease-in-out
   font-weight: 700
   &:hover
-    color: lighten($black, 25%)
+    color: lighten($blacknew, 25%)
 
 =white-link
   color: $whitenew
