--- a/app/assets/stylesheets/vars_mixins_fonts.sass
+++ b/app/assets/stylesheets/vars_mixins_fonts.sass
@@ -55,6 +55,12 @@ $dark-blue: #2980b9
   &:hover
     color: lighten($blacknew, 25%)
 
+=turquoise-link
+  color: $whitenew
+  transition: .3s ease-in-out
+  &:hover
+    color: lighten($blacknew, 25%)
+  
 =turquoise-link2
   color: $blacknew
   transition: .3s ease-in-out
