--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -27,7 +27,7 @@
     }
 
     .notmonth, .notmonth a { color: $turquoise; background: lighten($black, 10%); }
-    .today { background-color: $turquoise; color: $white; font-weight: 700 }
+    .today { background-color: $blacknew; color: $whitenew; font-weight: 700 }
   }
 
   #reservations #month {
