--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -11,8 +11,8 @@
     }
 
     th {
-      background: $turquoise;
-      color: $white;
+      background: $blacknew;
+      color: $whitenew;
       font-weight: 700;
       text-align: center;
       width: 14.2857142857143%;
