--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -81,6 +81,10 @@ body
       text-transform: uppercase
       letter-spacing: .1em
       margin-bottom: 10px
+      
+    h4
+      color: $blacknew
+      
     p
       color: $blacknew
       font:
