--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -50,12 +50,13 @@ body
       @media(max-width: 880px)
         +span-columns(12)
     strong
-      color: $bluenew
+      color: $whitenew
     select
-      background: $whitenew
+      background: $bluenew
       border: none
       text-align: center
       margin: 10px auto
+      color: $whitenew
 
     h1
       color: $bluenew
