--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -87,7 +87,7 @@ body
       color: $blacknew
       
     p
-      color: $blacknew
+      color: #f5deb3
       font:
         size: 24px
         weight: 700
