--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -47,12 +47,13 @@ body
 
       h2
         padding: 20px 0 10px 0
+        color: #f5deb3
       @media(max-width: 880px)
         +span-columns(12)
     strong
       color: $whitenew
     select
-      background: $bluenew
+      background: $blacknew
       border: none
       text-align: center
       margin: 10px auto
